SERVER-73591 Make_bytesSpilled in sorterFileStats atomic