src/mongo/db/sorter/sorter_stats.cpp
@@ -35,7 +35,7 @@ namespace mongo {
 SorterFileStats::SorterFileStats(SorterTracker* sorterTracker) : _sorterTracker(sorterTracker){};
 
 void SorterFileStats::addSpilledDataSize(long long data) {
-    _bytesSpilled += data;
+    _bytesSpilled.fetchAndAdd(data);
     if (_sorterTracker) {
         _sorterTracker->bytesSpilled.fetchAndAdd(data);
     }
